fix wraps and name mode

--- a/src/style.css
+++ b/src/style.css
@@ -123,11 +123,10 @@
   justify-content: center;
   font-size: var(--ui-text-size);
   color: var(--ui-text-color);
-
-  /* background-color: var(--ui-media-bg); */
   line-height: var(--ui-text-line-height);
   font-family: var(--ui-text-font-family);
   font-weight: var(--ui-text-font-weight);
+  word-wrap: break-word;
 }
 
 .section--center {
